<resources>
    <string name="app_name">qli38_p3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_game">NEW GAME</string>
    <string name="setting">SETTING</string>
    <string name="newLink">NEW LINK</string>
    <string name="back">BACK</string>
    <string name="info">INFORMATION</string>
    <string name="detail_title">See who else played this game:</string>
    <string name="version">Version: 1.0.0</string>
    <string name="copyright">Copyright &#169; 2021, Qianqian Li</string>
    <string name="question1">What is the text in the graph?</string>
    <string name="BLUE">BLUE</string>
    <string name="red">RED</string>
    <string name="question2">What is the hidden number in the graph?</string>
    <string name="one">1</string>
    <string name="four">4</string>
    <string name="check">CHECK YOUR ANSWER</string>
    <string name="confirm">You are added</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_title">Welcome to Tricky Quiz! Ready to get started?</string>
    <string name="show_message">Show message at start</string>
    <string name="edit_first_name">First Name</string>
    <string name="edit_comment">Leave a note for other players</string>
    <string name="edit_nickname">Nickname</string>
    <string name="edit_last_name">Last Name</string>
    <string name="player_add_alter">New player successfully added: %s</string>
    <string name="show_hidden_image">Show Hidden Picture</string>
    <string name="question3">What is the hidden plant in the graph?</string>
    <string name="leaf">LEAF</string>
    <string name="grass">GRASS</string>
    <string name="question4">Who has the same color as "GE"?</string>
    <string name="question5">Take a look around, catch the hidden animal!</string>
    <string name="elephant">ELEPHANT</string>
    <string name="donkey">DONKEY</string>
    <string name="go">GO</string>
    <string name="edit_emoji">Write down your current thoughts </string>


    <string name="effect">Effect</string>
    <string name="add_player">Add Me</string>
    <string name="wrong">You may want to try it again 😢</string>
    <string name="webview">Webview</string>
    <string name="checkotherplayers">Check Other Players</string>
    <string name="game">Game</string>
    <string name="Result">Result</string>
    <string name="addYou">Add Your Name</string>

    <string-array name="effects">
        <item>Crop Square</item>
        <item>Crop Circle</item>
    </string-array>

    <string-array name="effect_values">
        <item>0</item>
        <item>1</item>

    </string-array>
</resources>