<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.Detail3Fragment">

    <ImageView
        android:id="@+id/gamePic_detail3"
        android:layout_width="381dp"
        android:layout_height="348dp"
        android:src="@drawable/green"
        app:layout_constraintEnd_toStartOf="@+id/right_detail3"
        app:layout_constraintStart_toStartOf="@+id/left_detail3"
        app:layout_constraintTop_toTopOf="@+id/top_detail3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_detail3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_detail3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_detail3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_detail3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <TextView
        android:id="@+id/question2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/question2"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/right_detail3"
        app:layout_constraintStart_toStartOf="@+id/left_detail3"
        app:layout_constraintTop_toBottomOf="@+id/gamePic_detail3" />

    <Button
        android:id="@+id/answer1_detail3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="180dp"
        android:text="@string/one"
        app:layout_constraintBottom_toTopOf="@+id/bottom_detail3"
        app:layout_constraintEnd_toStartOf="@+id/right_detail3"
        app:layout_constraintStart_toStartOf="@+id/left_detail3"
        app:layout_constraintTop_toBottomOf="@+id/question2" />

    <Button
        android:id="@+id/answer4_detail3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="180dp"
        android:text="@string/four"
        app:layout_constraintBottom_toTopOf="@+id/bottom_detail3"
        app:layout_constraintEnd_toStartOf="@+id/right_detail3"
        app:layout_constraintStart_toStartOf="@+id/left_detail3"
        app:layout_constraintTop_toBottomOf="@+id/question2" />


</androidx.constraintlayout.widget.ConstraintLayout>