<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout8"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.Detail4Fragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_detail4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_detail4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_detail4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_detail4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="367dp"
        android:layout_height="300dp"
        android:src="@drawable/black"
        app:layout_constraintEnd_toStartOf="@+id/right_detail4"
        app:layout_constraintStart_toStartOf="@+id/left_detail4"
        app:layout_constraintTop_toTopOf="@+id/top_detail4" />

    <TextView
        android:id="@+id/question3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/question3"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/right_detail4"
        app:layout_constraintStart_toStartOf="@+id/left_detail4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/answer1_detail4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="180dp"
        android:text="@string/leaf"
        android:textColor="#7FF384"
        app:layout_constraintBottom_toTopOf="@+id/bottom_detail4"
        app:layout_constraintEnd_toStartOf="@+id/right_detail4"
        app:layout_constraintStart_toStartOf="@+id/left_detail4"
        app:layout_constraintTop_toBottomOf="@+id/question3" />

    <Button
        android:id="@+id/answer2_detail4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="180dp"
        android:text="@string/grass"
        android:textColor="#E91E63"
        app:layout_constraintBottom_toTopOf="@+id/bottom_detail4"
        app:layout_constraintEnd_toStartOf="@+id/right_detail4"
        app:layout_constraintStart_toStartOf="@+id/left_detail4"
        app:layout_constraintTop_toBottomOf="@+id/question3" />
</androidx.constraintlayout.widget.ConstraintLayout>