<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.Detail2Fragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_deatil2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_detail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_detail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_detail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <ImageView
        android:id="@+id/gamePic_detail2"
        android:layout_width="382dp"
        android:layout_height="335dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/blue"
        app:layout_constraintEnd_toStartOf="@+id/right_detail2"
        app:layout_constraintStart_toStartOf="@+id/left_deatil2"
        app:layout_constraintTop_toTopOf="@+id/top_detail2" />

    <TextView
        android:id="@+id/question1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/question1"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/right_detail2"
        app:layout_constraintStart_toStartOf="@+id/left_deatil2"
        app:layout_constraintTop_toBottomOf="@+id/gamePic_detail2" />

    <Button
        android:id="@+id/red_answer_detail2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="180dp"
        android:background="@color/white"
        android:text="@string/red"
        android:textColor="#F60202"
        app:layout_constraintBottom_toTopOf="@+id/bottom_detail2"
        app:layout_constraintEnd_toStartOf="@+id/right_detail2"
        app:layout_constraintStart_toStartOf="@+id/left_deatil2"
        app:layout_constraintTop_toBottomOf="@+id/question1" />

    <Button
        android:id="@+id/blue_answer_detail2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="180dp"
        android:background="@color/white"
        android:text="@string/BLUE"
        android:textColor="#082DFF"
        app:layout_constraintBottom_toTopOf="@+id/bottom_detail2"
        app:layout_constraintEnd_toStartOf="@+id/right_detail2"
        app:layout_constraintStart_toStartOf="@+id/left_deatil2"
        app:layout_constraintTop_toBottomOf="@+id/question1" />
</androidx.constraintlayout.widget.ConstraintLayout>