<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.main.DetailFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <TextView
        android:id="@+id/detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/detail_title"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/right_detail"
        app:layout_constraintStart_toStartOf="@+id/left_detail"
        app:layout_constraintTop_toTopOf="@+id/top_detail" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="288dp"
        android:layout_height="429dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_detail"
        app:layout_constraintEnd_toStartOf="@+id/right_detail"
        app:layout_constraintStart_toStartOf="@+id/left_detail"
        app:layout_constraintTop_toBottomOf="@+id/detail_title" />

    <Button
        android:id="@+id/add_btn_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="180dp"
        android:text="@string/add_player"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_detail"
        app:layout_constraintStart_toStartOf="@+id/left_detail"
        app:layout_constraintTop_toTopOf="@+id/bottom_detail" />

    <Button
        android:id="@+id/gameStart_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:text="@string/start_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_detail"
        app:layout_constraintStart_toStartOf="@+id/left_detail"
        app:layout_constraintTop_toTopOf="@+id/bottom_detail" />

</androidx.constraintlayout.widget.ConstraintLayout>